--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ar">
+<html dir="rtl" lang="ar">
 
 <head>
   <meta charset="utf-8">
@@ -24,30 +24,31 @@
 
     <header class="masthead mb-auto">
       <div class="inner">
-        <img class="mb-1 masthead-brand" src="/images/bootstrap-solid.svg" alt="" width="50" height="50">
+        <!--  <img class="mb-1 masthead-brand" src="/images/bootstrap-solid.svg" alt="" width="50" height="50">-->
 
         <nav class="nav nav-masthead justify-content-center">
+          <a class="nav-link mr-2 active" href="#">الرئسية</a>
           <a class="nav-link" href="#">اتصل بنا</a>
-          <a class="nav-link active" href="#">الرئسية</a>
+
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover">
       <h1 class="main-title mt-3">منصة تبرع</h1>
-      <h2 class="main-subtitle mt-3">تبرع هي منصة تصل المرضى بالمتبرعين</h2>
+      <h3 class="main-subtitle mt-3">تبرع هي منصة تصل المرضى بالمتبرعين</h3>
       <form class="form-signin">
-        <h3 class="form-title mb-3">الرجاء تسجيل الدخول</h3>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <h5 class="form-title mb-3">الرجاء تسجيل الدخول</h2>
+
+          <input type="tel" id="inputEmail" class="form-control" placeholder="رقم الهاتف" required autofocus>
+
+          <input type="password" id="inputPassword" class="form-control" placeholder="الكود" required>
+          <div class="checkbox mb-3">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+          </div>
+          <button class="btn btn-lg btn-default btn-block " type="submit">دخول</button>
       </form>
     </main>
 
