add google font cairo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css" integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If"
     crossorigin="anonymous">
 
-
-  <!-- Custom styles for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet"><!-- Custom styles for this template -->
   <link href="main.css" rel="stylesheet">
 </head>
 
