--- a/getcode.html
+++ b/getcode.html
@@ -37,12 +37,9 @@
       <h1 class="main-title mt-5">منصة تبرع</h1>
       <h3 class="main-subtitle mt-1"> صِلَة بين المرضى والمتبرعين بالدم</h3>
       <form class="form-sign">
-        <h5 class="form-title mb-3">الرجاء تسجيل الدخول</h5>
+        <h5 class="form-title mb-3"> استرجاع الكود</h5>
         <input type="tel" id="inputTel" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off"
           autofocus onfocus="this.value=''">
-        <input type="
-            password" id="inputPassword" class="form-control mb-2" placeholder="الكود" required autocomplete="off"
-          onfocus="this.value=''">
         <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off"
           autofocus onfocus="this.value=''">
 
@@ -51,10 +48,10 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div> -->
-        <button class="btn btn-md btn-default btn-block mb-3" type="submit">دخول</button>
+        <button class="btn btn-md btn-default btn-block mb-3" type="submit">سجل</button>
         <div class="user-options">
-          <p class="mb-1"> إنشاء <a href="/signin.html">حساب جديد</a></p>
-          <p class="mb-1">استرجاع الكود <a href="/getcode.html">من هنا</a></p>
+          <p class="mb-1">تسجيل <a href="index.html">الدخول</a></p>
+
         </div>
       </form>
     </main>
