create all pages

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <header>
       <div>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link mr-2 active" href="/index.html">الرئسية</a>
+          <a class="nav-link  active mr-3" href="/index.html">الرئسية</a>
+          <a class="nav-link" href="/signin.html">تسجيل</a>
           <a class="nav-link" href="/contactus.html">اتصل بنا</a>
+          <a class="nav-link" href="/userprofile.html">بيانات شخصية</a>
+          <a class="nav-link" href="/add_request.html">طلب تبرع</a>
+          <a class="nav-link" href="/getcode.html"> الكود</a>
         </nav>
       </div>
     </header>
