--- a/add_request.html
+++ b/add_request.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="main.css" rel="stylesheet">
+  <script type="text/javascript" src="/main.js"></script>
 </head>
 
 <body class="text-center">
@@ -38,25 +39,39 @@
     </header>
 
     <main role="main">
-      <h1 class="main-title mt-5">منصة تبرع</h1>
-      <h3 class="main-subtitle mt-1"> صِلَة بين المرضى والمتبرعين بالدم</h3>
-      <form class="form-sign">
-        <h5 class="form-title mb-3"> استرجاع الكود</h5>
-        <input type="tel" id="inputTel" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off"
-          autofocus onfocus="this.value=''">
-        <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off"
-          autofocus onfocus="this.value=''">
+      <form class="form-sign mt-3">
+        <div class=" mb-5">
+          <h5 class="form-title "> اضافة طلب تبرع </h5>
+          <h3 class="ml-2" dir="ltr"><u>+213-555-811-350</u></h3>
+        </div>
+        <div class="mb-2 align-right">
+          <h5 class="w-100">سلامتك, كيف تصف حالتك؟</h5>
+          <div class="form-check form-check-inline  ">
+
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"
+              onclick="handleClick(this);">
+            <label class="form-check-label" for="inlineRadio1">&nbsp;مستقرة</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"
+              onclick="handleClick(this);">
+            <label class="form-check-label" for="inlineRadio2">&nbsp;حرجة</label>
+          </div>
+
+        </div>
+
+        <input type="tel" id="inputCodePost" class="form-control mb-2" placeholder="حدد مكان تواجدك" required
+          autocomplete="off" autofocus onfocus="this.value=''">
+        <input type="captcha" id="captcha" class="form-control mb-4" placeholder="5+9 =?" required autocomplete="off"
+          autofocus onfocus="this.value=''" required maxlength="30">
 
         <!--           <div class=" checkbox mb-3">
             <label>
               <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div> -->
-        <button class="btn btn-md btn-default btn-block mb-3" type="submit">سجل</button>
-        <div class="user-options">
-          <p class="mb-1">تسجيل <a href="index.html">الدخول</a></p>
+        <button class="btn btn-md btn-default btn-block mb-3" type="submit">اضف الطلب</button>
 
-        </div>
       </form>
     </main>
 
@@ -71,6 +86,7 @@
 
 
   </div>
+
 </body>
 
 </html>
