--- a/contactus.html
+++ b/contactus.html
@@ -38,12 +38,13 @@
     </header>
 
     <main role="main">
-      <h1 class="main-title mt-5">منصة تبرع</h1>
-      <h3 class="main-subtitle mt-1"> صِلَة بين المرضى والمتبرعين بالدم</h3>
+      <h3 class="main-subtitle mt-5"> يسرنا تواصلك معنا</h3>
       <form class="form-sign">
-        <h5 class="form-title mb-3"> استرجاع الكود</h5>
-        <input type="tel" id="inputTel" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off"
-          autofocus onfocus="this.value=''">
+
+        <input type="tel" id="nom" class="form-control mb-2" placeholder="الاسم" required autocomplete="off" autofocus
+          onfocus="this.value=''">
+
+        <textarea class="form-control  mb-2" id="exampleFormControlTextarea1" rows="3"></textarea>
         <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off"
           autofocus onfocus="this.value=''">
 
@@ -52,10 +53,10 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div> -->
-        <button class="btn btn-md btn-default btn-block mb-3" type="submit">سجل</button>
+        <button class="btn btn-md btn-default btn-block mb-3" type="submit">ارسل</button>
         <div class="user-options">
-          <p class="mb-1">تسجيل <a href="index.html">الدخول</a></p>
-
+          <p class="mb-1"> إنشاء <a href="/signin.html">حساب جديد</a></p>
+          <p class="mb-1">استرجاع الكود <a href="/getcode.html">من هنا</a></p>
         </div>
       </form>
     </main>
