--- a/add_request.html
+++ b/add_request.html
@@ -39,11 +39,11 @@
     </header>
 
     <main role="main">
+      <div class="main-header">
+        <h5 class="pt-3"> اضافة طلب تبرع </h5>
+        <h3 class="pb-3" dir="ltr">+213-555-811-350</h3>
+      </div>
       <form class="form-sign mt-3">
-        <div class=" mb-5">
-          <h5 class="form-title "> اضافة طلب تبرع </h5>
-          <h3 class="ml-2" dir="ltr"><u>+213-555-811-350</u></h3>
-        </div>
         <div class="mb-2 align-right">
           <h5 class="w-100">سلامتك, كيف تصف حالتك؟</h5>
           <div class="form-check form-check-inline  ">
