--- a/contactus.html
+++ b/contactus.html
@@ -38,7 +38,10 @@
     </header>
 
     <main role="main">
-      <h3 class="main-subtitle mt-5"> يسرنا تواصلك معنا</h3>
+      <div class="main-header">
+        <h3 class="main-subtitle pt-3 pb-3"> يسرنا تواصلك معنا</h3>
+      </div>
+
       <form class="form-sign">
 
         <input type="tel" id="nom" class="form-control mb-2" placeholder="الاسم" required autocomplete="off" autofocus
