--- a/index.html
+++ b/index.html
@@ -13,40 +13,47 @@
   <!--link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">-->
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
-    integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cairo:400,900&amp;subset=arabic" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="main.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.1.62/jquery.inputmask.bundle.js"></script>
+  <script type="text/javascript" src="/main.js"></script>
 </head>
 
 <body class="text-center">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
     <header>
       <div>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link  active mr-3" href="/index.html">الرئسية</a>
+          <a class="nav-link  active" href="/index.html">الرئسية</a>
           <a class="nav-link" href="/signin.html">تسجيل</a>
           <a class="nav-link" href="/contactus.html">اتصل بنا</a>
           <a class="nav-link" href="/userprofile.html">بيانات شخصية</a>
           <a class="nav-link" href="/add_request.html">طلب تبرع</a>
           <a class="nav-link" href="/getcode.html"> الكود</a>
+          <a class="nav-link" href="/donorprofile.html"> المتبرع</a>
         </nav>
       </div>
     </header>
 
     <main role="main">
-      <h1 class="main-title mt-5">منصة تبرع</h1>
-      <h3 class="main-subtitle mt-1"> صِلَة بين المرضى والمتبرعين بالدم</h3>
+      <div class="main-header ">
+        <h1 class="main-title pt-3">منصة تبرع</h1>
+        <h3 class="main-subtitle pb-3"> صِلَة المرضى بالمتبرعين بالدم</h3>
+      </div>
+
+
       <form class="form-sign">
         <h5 class="form-title mb-3">الرجاء تسجيل الدخول</h5>
-        <input type="tel" id="inputTel" class="form-control mb-2" placeholder="رقم الهاتف" required autocomplete="off"
-          autofocus onfocus="this.value=''">
-        <input type="
-            password" id="inputPassword" class="form-control mb-2" placeholder="الكود" required autocomplete="off"
-          onfocus="this.value=''">
+
+        <input type="text" id="tel" lang="en" dir="ltr" class="form-control mb-2" placeholder="رقم الهاتف" required
+          autocomplete="off" autofocus onfocus="this.value=''">
+
+        <input type="password" id="inputPassword" class="form-control mb-2" placeholder="الكود" required
+          autocomplete="off" onfocus="this.value=''">
         <input type="captcha" id="captcha" class="form-control mb-2" placeholder="5+9 =?" required autocomplete="off"
           autofocus onfocus="this.value=''">
 
